[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "^3", features = ["derive"] }
rc4 = { version = "0.1.0", path = "../rc4" }
